# collaborative-canvas

./: .env.example  .gitignore  GIT_COMMIT_PUSH_PLAN.md  GIT_COMMIT_PUSH_TODO.md  GIT_ROLLBACK_PLAN.md  NEW_COMMIT_TODO.md  REMOTE_PUSH_PLAN.md  SCANNER_V3_AUDIT.md  bun.lockb  bunfig.toml  debug_walkthrough.md  index.html  manual_verification_narrative_sync.md  package-lock.json  package.json  rust_sqlite_opfs_walkthrough.md  tailwind.config.ts  test-output.json  test-output.txt  test_output.txt  ts_errors.txt  ts_errors_2.txt  tsc_output.txt  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vite.config.ts.timestamp-1766213086918-8676afcf59fb2.mjs
docs/: ARCHITECTURE.md  MIGRATION.md
rust/kittcore/: .gitignore  Cargo.toml  README.md  build.txt  build_err.txt  build_error.txt  build_errors.txt  build_output.txt  cargo_error.txt  cargo_errors.txt  check.txt  check_error.txt  check_errors.txt  check_log.txt  check_output.txt  check_output_3.txt  check_output_4.txt  diag_test.txt  errors.txt  pagerank_test.txt  test_error.txt  test_fail.txt  test_full.txt  test_harness.html  test_out.txt  test_reflex.txt  test_relation.txt  triple_test.txt  wasm_build.txt
rust/kittcore/src/: lib.rs
rust/kittcore/src/db/: mod.rs
rust/kittcore/src/embeddings/: chunker.rs  config.rs  mod.rs  model.rs  tokenize.rs
rust/kittcore/src/graphdb/: indexes.rs  mod.rs  storage.rs
rust/kittcore/src/hnsw/: binary_quantization.rs  distance.rs  filter.rs  index.rs  mmr.rs  mod.rs  node.rs  pqueue.rs  quantization.rs  wasm.rs
rust/kittcore/src/hnsw/tests/: binary_quantization_tests.rs  distance_tests.rs  diversity_tests.rs  filter_tests.rs  hnsw_tests.rs  hybrid_tests.rs  mmr_tests.rs  mod.rs  node_tests.rs  pqueue_tests.rs  quantization_tests.rs  serialization_tests.rs  two_stage_tests.rs
rust/kittcore/src/rag/: chunker.rs  index.rs  mod.rs  pipeline.rs  raptor.rs
rust/kittcore/src/reality/: algorithms.rs  api.rs  ast.rs  bridge.rs  engine.rs  entity_layer.rs  global.rs  graph.rs  intern.rs  metadata_layer.rs  mod.rs  parser.rs  projection.rs  synapse.rs  syntax.rs  temporal.rs  tests.rs  unification.rs
rust/kittcore/src/resorank/: config.rs  entropy.rs  incremental.rs  math.rs  mod.rs  proximity.rs  scorer.rs  types.rs
rust/kittcore/src/scanner/: attacher.rs  change.rs  chunker.rs  conductor.rs  constraints.rs  core.rs  dialogue.rs  document.rs  implicit.rs  incremental.rs  mod.rs  narrative.rs  projections.rs  reflex.rs  relation.rs  relation_filter.rs  relation_schema.rs  resolver.rs  structured_relation.rs  syntax.rs  temporal.rs  triple.rs  unified.rs  verb_morphology.rs
rust/resorank-core/: .gitignore  Cargo.toml  PORT_SUMMARY.md
rust/resorank-core/src/: entropy.rs  incremental.rs  lib.rs  math.rs  proximity.rs  scorer.rs  types.rs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/atoms/: calendar.ts  editorAtoms.ts  entity-attributes.ts  highlightingAtoms.ts  index.ts  narrative-focus.ts  notes-async.ts  notes-atomic.ts  notes-autosave.ts  notes-lazy.ts  notes-optimized-v2.ts  notes-optimized.ts  notes-sync.ts  notes-virtualized.ts  notes.ts  search.ts
src/components/: AppHeader.tsx  BacklinksPanel.tsx  EntitiesPanel.tsx  EntityMentionsPanel.tsx  ErrorBoundary.tsx  FooterLinksPanel.tsx  OutgoingLinksPanel.tsx  RichEditor.tsx  RightSidebar.tsx  ThemeToggle.tsx  VirtualizedNoteList.tsx  VirtualizedNoteRow.tsx  app-sidebar.tsx
src/contexts/: CalendarContext.tsx  CozoContext.tsx  EntitySelectionContext.tsx  EntityThemeContext.tsx  NERContext.tsx  NotesContext.tsx  SchemaContext.tsx  SearchContext.tsx  TemporalHighlightContext.tsx  ThemeContext.tsx
src/hooks/: useAIInlineEdit.ts  useBidirectionalLinks.ts  useCozoRegistry.ts  useEntityAttributes.ts  useEntityCache.ts  useEntityIntelligence.ts  useEntityRegistry.ts  useEntityRelationships.ts  useEntitySync.ts  useFantasyCalendar.ts  useGraphData.ts  useGraphFilters.ts  useGraphInteraction.ts  useGraphLayout.ts  useGraphProjection.ts  useJotaiNotes.ts  useJotaiSearch.ts  useLayoutDimensions.ts  useLinkIndex.ts  useNarrativeAwareCreation.ts  useNarrativeManagement.ts  useNetwork.ts  useNetworkAutoCreation.ts  useResoRankSearch.ts  useSidebarWidth.ts  useTTS.ts  useTheme.ts  useUnifiedEntityAttributes.ts  useUnifiedGraph.ts
src/lib/: atom-utils.ts  cozo-test.ts  perf-monitor.ts  perf.ts  storage.ts  store.ts
src/pages/: FantasyCalendarPage.tsx  GraphExplorerPage.tsx  Index.tsx
src/styles/: arborist-overrides.css
(+763 files in other folders)
