[package]
name = "kittcore"
version = "0.1.0"
edition = "2021"
authors = ["KittClouds Team"]
description = "KittCore: Document Scanner + ResoRank Search Engine - Rust/WASM implementation"
license = "MIT"
repository = "https://github.com/KittClouds/collaborative-canvas"
keywords = ["scanner", "search", "bm25", "wasm", "aho-corasick", "nlp"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
serde-wasm-bindgen = "0.6.5"
aho-corasick = "1.1"
daachorse = "1.0.0"
regex = "1.12.2"
chrono = "0.4.42"
instant = { version = "0.1", features = ["wasm-bindgen"] }
web-sys = { version = "0.3", features = ["console"] }
rowan = "0.16.1"
unicode-segmentation = "1.10"
rustworkx-core = "0.17"  # Graph algorithms + re-exports petgraph 0.8
lasso = { version = "0.7", features = ["multi-threaded"] }

# Embeddings module (Rust-native ONNX inference for WASM)
tract-onnx = { version = "0.21", default-features = false }
tract-core = { version = "0.21", default-features = false }
ndarray = "0.16"
# Tokenizers for BERT-style models (Rust port of HuggingFace tokenizers)
# NOTE: Not using onig feature as it requires C compilation, incompatible with WASM
tokenizers = { version = "0.19", default-features = false, features = ["unstable_wasm"] }
# WASM RNG support (required by tokenizers and tract via rand)
# WASM RNG support:
# - getrandom 0.2 (for tract/tokenizers via rand 0.8) needs "js"
# - getrandom 0.3 (for rustworkx-core via rand 0.9) needs "wasm-bindgen"
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }


# RAG Pipeline (Phase 1)
# NOTE: micro-hnsw-wasm requires no_std panic=abort, conflicts with our std usage
# Using brute-force cosine similarity for now (fast enough for 10k chunks)

# SQLite WASM (experimental - Rust-side DB access with OPFS)
# Requires LLVM/Clang installed for C→WASM compilation
sqlite-wasm-rs = "0.5"
sqlite-wasm-vfs = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
